# rai

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: build.yml  cmake.yml
_make/: config.mk.default  defines.mk  generic.mk  install.sh  qtcreator_debuggingHelpers.py
_make/retired/: system-depend.mk
make/: config.mk.default  generic.mk  run-path.sh
makeutils/: config.mk.default  defines.mk  generic.mk  run-path.sh
makeutils/retired/: config.mk.pr2
rai/: rai_msgs
rai/Algo/: MLcourse.cpp  MLcourse.h  Makefile  SplineCtrlFeed.cpp  SplineCtrlFeed.h  algos.cpp  algos.h  ann.cpp  ann.h  astar.cpp  astar.h  cma.cpp  cma.h  dataNeighbored.cpp  dataNeighbored.h  eigenValues.cpp  eigenValues.h  gaussianProcess.cpp  gaussianProcess.h  gaussianProcess_plot.cpp  gpOp.cpp  gpOp.h  hungarian.cpp  hungarian.h  kalman.cpp  kalman.h  priorityQueue.cpp  priorityQueue.h  rrt.cpp  rrt.h  spline.cpp  spline.h
rai/Control/: CtrlMethods.cpp  CtrlMethods.h  CtrlMsgs.cpp  CtrlMsgs.h  CtrlObjective.cpp  CtrlObjective.h  CtrlProblem.cpp  CtrlProblem.h  CtrlReference.cpp  CtrlReference.h  CtrlReferences.cpp  CtrlReferences.h  CtrlSet.cpp  CtrlSet.h  CtrlSolver.cpp  CtrlSolver.h  CtrlSolvers.cpp  CtrlSolvers.h  CtrlTargets.cpp  CtrlTargets.h  CtrlThread.h  LeapMPC.cpp  LeapMPC.h  Makefile  RTControllerSimulation.cpp  RTControllerSimulation.h  SecMPC.cpp  SecMPC.h  ShortPathMPC.cpp  ShortPathMPC.h  SplineCtrlFeed.cpp  SplineCtrlFeed.h  TaskControlThread.cpp  TaskControlThread.h  TimingMPC.h  WaypointMPC.cpp  WaypointMPC.h  control.cpp  control.h  ctrlMsg.h  (+18 more)
rai/Core/: Makefile  array.cpp  array.h  array.ipp  array.tpp  arrayDouble.cpp  arrayDouble.cxx  arrayDouble.h  base64.c  defines.cpp  defines.h  graph.cpp  graph.h  thread.cpp  thread.h  util.cpp  util.h  util.ipp  util.tpp
rai/Geo/: Makefile  analyticShapes.cpp  analyticShapes.h  depth2PointCloud.cpp  depth2PointCloud.h  fcl.h  fclInterface.cpp  fclInterface.h  geo.cpp  geo.h  geoOptim.cpp  geoms.cpp  geoms.h  mesh.cpp  mesh.h  mesh_readAssimp.cpp  mesh_readAssimp.h  pairCollision.cpp  pairCollision.h  pqp_RectDist.cpp  qhull.cpp  qhull.h  signedDistanceFunctions.cpp  signedDistanceFunctions.h  stb_image.h
rai/GeoOptim/: geoOptim.cpp  geoOptim.h
rai/Gui/: Makefile  color.h  graphview.cpp  graphview.h  gtk.cpp  gtk.h  opengl.cpp  opengl.h  plot.cpp  viewer.cpp  viewer.h
rai/KOMO/: Makefile  komo-ext.cpp  komo-ext.h  komo.cpp  komo.h  komo_NLP.cpp  komo_NLP.h  manipTools.cpp  manipTools.h  objective.cpp  objective.h  opt-benchmarks.cpp  opt-benchmarks.h  pathTools.cpp  pathTools.h  phase_optimization.h  skeleton.cpp  skeleton.h  skeletonSymbol.cpp  skeletonSymbol.h  splined.cpp  splined.h  task.cpp  task.h
rai/Kin/: F_LeapCost.cpp  F_PairCollision.cpp  F_PairCollision.h  F_collisions.cpp  F_collisions.h  F_contacts.cpp  F_contacts.h  F_dynamics.cpp  F_dynamics.h  F_forces.cpp  F_forces.h  F_geometrics.cpp  F_geometrics.h  F_grasping.cpp  F_grasping.h  F_operators.cpp  F_operators.h  F_pose.cpp  F_pose.h  F_pushed.cpp  F_pushed.h  F_qFeatures.cpp  F_qFeatures.h  F_static.cpp  F_static.h  Makefile  PhysXThread.cpp  PhysXThread.h  TM_AboveBox.cpp  TM_AboveBox.h  TM_Align.cpp  TM_Align.h  TM_AlignStacking.cpp  TM_AlignStacking.h  TM_BeliefTransition.cpp  TM_BeliefTransition.h  TM_ContactConstraints.cpp  TM_ContactConstraints.h  TM_FixSwitchedObjects.cpp  TM_FixSwitchedObjects.h  (+121 more)
rai/LGP/: LGP_Tool.cpp  LGP_Tool.h  LGP_computers.cpp  LGP_computers.h  LGP_node.cpp  LGP_node.h  LGP_tree.cpp  LGP_tree.h  Makefile  bounds.cpp  bounds.h  compute.h  manipulationTree.cpp  manipulationTree.h  optLGP.cpp  optLGP.h
rai/Logic/: Makefile  fol.cpp  fol.h  folWorld.cpp  folWorld.h  fol_mcts_world.cpp  fol_mcts_world.h  relationalMachine.cpp  relationalMachine.h  treeSearchDomain.cpp  treeSearchDomain.h
rai/MCTS/: Makefile  env_robert.h  environment.cpp  environment.h  problem_BlindBranch.cpp  problem_BlindBranch.h  solver_AStar.cpp  solver_AStar.h  solver_MBTS.cxx  solver_MBTS.h  solver_PlainMC.cpp  solver_PlainMC.h  solver_marc.cpp  solver_marc.h
rai/Msg/: Makefile  MotionReference.h
rai/Operate/: Makefile  op.cpp  op.h  path.cpp  path.h  pathValidate.cpp  pathValidate.h  robotInterface.cpp  robotInterface.h  robotOperation.cpp  robotOperation.h  robot_pr2.cpp  robot_pr2.h  robotio.cpp  robotio.h  simulation.cpp  simulation.h  simulationThread.cpp  simulationThread.h  splineRunner.cpp  splineRunner.h
rai/Optim/: BayesOpt.cpp  BayesOpt.h  GlobalIterativeNewton.cpp  GlobalIterativeNewton.h  GraphOptim.cpp  GraphOptim.h  Graph_Problem.cpp  Graph_Problem.h  KOMO_Problem.cpp  KOMO_Problem.h  MP_Factory.cpp  MP_Factory.h  MP_Solver.cpp  MP_Solver.h  Makefile  MathematicalProgram.cpp  MathematicalProgram.h  NLP.cpp  NLP.h  NLP_Factory.cpp  NLP_Factory.h  NLP_GraphSolver.cpp  NLP_GraphSolver.h  NLP_Solver.cpp  NLP_Solver.h  RidgeRegression.cpp  RidgeRegression.h  benchmarks.cpp  benchmarks.h  constrained.cpp  constrained.h  convert.cpp  convert.h  gradient.cpp  gradient.h  lagrangian.cpp  lagrangian.h  newOptim.cpp  newOptim.h  newton.cpp  (+17 more)
rai/PathAlgos/: ConfigurationProblem.cpp  ConfigurationProblem.h  Makefile  PathResult.h  PathSmoother.cpp  RRT_PathFinder.cpp  RRT_PathFinder.h
rai/Perception/: Makefile  audio.cpp  audio.h  avutil.cpp  avutil.h  colorseg.cpp  colorseg.h  colorspace.cpp  colorspace.h  dataStructures.cpp  dataStructures.h  depth2PointCloud.cpp  depth2PointCloud.h  depth_packing.cpp  depth_packing.h  filter.cpp  filter.h  g4data.cpp  g4data.h  g4data.tpp  kinect2pointCloud.cpp  kinect2pointCloud.h  minEigModel.cpp  minEigModel.h  modelEnsemble.cpp  modelEnsemble.h  object.cpp  object.h  object_detector.cpp  object_detector.h  opencv.cpp  opencv.h  opencvCamera.cpp  opencvCamera.h  pcl.cpp  pcl.h  pclPlaneExtraction.cpp  pclPlaneExtraction.h  percViewer.cpp  percViewer.h  (+25 more)
rai/Plot/: Makefile  gaussianProcess_plot.cpp  plot.cpp  plot.h
rai/RosCom/: Makefile  baxter.cpp  baxter.h  image_pub.cpp  image_pub.h  perceptionCollection.h  roscom.h  (+15 more)
src/: contrib
test/: vim-session.vim
(+1661 files in other folders)
